blog/_includes/blog-deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: k3s-blog
spec:
  selector:
    app: k3s-blog
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
